additions to cards, head and footer

--- a/main/style.css
+++ b/main/style.css
@@ -229,3 +229,8 @@ footer {
     margin-top:20px;
     font-size: large !important;
   }
+
+.sec1{
+    /* background-color: green; */
+    /* color: blue; */
+}
